--- a/src/components/HowItWorks/HowItWorksOverlay.module.scss
+++ b/src/components/HowItWorks/HowItWorksOverlay.module.scss
@@ -10,6 +10,10 @@
   transition: opacity 0.4s ease;
   text-align: center;
   padding: 20px;
+
+  @include mobile {
+    display: none;
+  }
 }
 
 .hidden {
